feat: add album, artist, track endpoints
